--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@ function hidePopup(){
 <body>	
 	<div class="header-bg">
 		<header>
+			<nav>
+			<div class="logotype">
 			<a href="/">
 				<img class="logo" src="image/logo.png" alt="logo">
 			</a>
 			<h2 class="logo_text">Invoicer</h2>
-			<nav>
-				<div class="nav">
+			</div>	
+			<div class="nav">		
 					<ul>
 						<li>OUR FEATURES</li>
 						<li>ABOUT US</li>
@@ -92,7 +94,7 @@ function hidePopup(){
 			<div class="footer_menu">	
 				<h1 class="title_input_footer">Don't forget to sing up</h1>		
 				<input class="mail_input" type="text" placeholder="Email">
-				<a class="footer_button" href="#">SING UP</a>
+				<a class="footer_button" href="#" onclick="showPopup()">SING UP</a>
 			</div>
 		</div>
 	
