--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ function hidePopup(){
 			</ul>
 			<div class="aery">
 			<a href="/">
-				<img src="image/Aery.png" alt="logo">
+				<img src="image/aery.png" alt="logo">
 			</a>
 			</div>
 		</div>
