--- a/index.html
+++ b/index.html
@@ -99,19 +99,24 @@ function hidePopup(){
 		</div>
 	
 		<div class="footer">
+		<div class="logotype_footer">
 			<a href="/">
 				<img class="logo" src="image/logo.png" alt="logo">
 			</a>
-			<h2 class="logo_text">Invoicer</h2>	
+			<h2 class="logo_text">Invoicer</h2>
+			</div>
+			<div class="nav_footer">	
 			<ul class="info">
 				<li>&copy;	Copyright 2014 lnvoicer</li>
 				<li>info@invoicer.nl</li>
 				<li>0634870104</li>
 			</ul>
+			</div>
 			<div class="aery">
 			<a href="/">
 				<img src="image/aery.png" alt="logo">
 			</a>
+			</div>
 			</div>
 		</div>
 	</footer>
